Finish tablet/desktop nav spacing;  Fix background color for mobile

--- a/web/app/themes/artandscience/assets/styles/components/_base.scss
+++ b/web/app/themes/artandscience/assets/styles/components/_base.scss
@@ -26,7 +26,7 @@ So use a seperate element.
 Also the blur bleeds at the edges, so we use a slightly oversized psuedo element.
 Clipping the overflow hides the bleed.
 */
-.background {
+.site-background {
   top: 0;
   left: 0;
   right: 0;
