--- a/web/app/themes/artandscience/assets/styles/components/_nav.scss
+++ b/web/app/themes/artandscience/assets/styles/components/_nav.scss
@@ -17,6 +17,8 @@ $mobile-nav-width: 160px;
   @include media-md {
     width: 100%;
     transform: none;
+    margin-top: 60px;
+    padding: 0;
     position: relative;
   }
 
@@ -59,6 +61,7 @@ $mobile-nav-width: 160px;
         width: $big-dash-width;
       }
     }
+
     @include big-dash($orange,after) {
       top: auto;
       bottom: 0;
@@ -143,17 +146,17 @@ button.menu-toggle {
 
 // Nav open/close animation
 @include max-screen($breakpoint-medium - 1px) {
-  .site-wrap, .blurred-background, .site-banner, .site-header .site-nav {
+  .site-wrap, .site-background, .site-banner, .site-header .site-nav {
     transition: transform 0.3s 0.15s;
   }
   .menu-toggle {
     transition: transform 0.3s 0.15s, height 0.15s; 
   }
-  .blurred-background {
+  .site-background {
     transform: none;
   }
   body.-nav-open {
-    .site-wrap, .blurred-background, .site-banner, .menu-toggle {
+    .site-wrap, .site-background, .site-banner, .menu-toggle {
       transform: translateX($mobile-nav-width);
     }
     .site-header .site-nav {
