--- a/web/app/themes/artandscience/assets/styles/helpers/_variables.scss
+++ b/web/app/themes/artandscience/assets/styles/helpers/_variables.scss
@@ -30,7 +30,7 @@ $brand-secondary: $white;
 // Note: for interpreting ID file: xs = mobile, md = tablet, lg = desktop
 $breakpoint-small: 480px;
 $breakpoint-medium: 768px;
-$breakpoint-large: 1000px;
+$breakpoint-large: 1200px;
 // $breakpoint-huge: 1200px;
 // $breakpoint-nav: 1050px;
 $breakpoint-footer-two-col: 800px;
